# lightspeed

./: .gitignore  CMakeLists.txt  conanfile.py
.github/: profile
.github/workflows/: main.yml
include/: camera.h  lens.h  lightspeed.h  sensor.h
include/color/: color.h
include/hitter/: hitter.h
include/material/: material.h
include/ray/: hit.h  ray.h
include/surface/: surface.h
include/surface/equation/: plane.h  sphere.h
include/surface/operation/: boolean.h
src/: hitter.cpp  lightspeed.cpp
src/ray/: hit.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
